--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ETH/UZH Mensa</string>
     <string name="db_name">mensas.db</string>
+    <string name="language_german">Deutsch</string>
+    <string name="language_english">English</string>
 </resources>
