--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
-    <string name="app_name">ETH/UZH Mensa</string>
-    <string name="db_name">mensas.db</string>
-    <string name="language_german">Deutsch</string>
+    <string name="app_name" translatable="false">ETH/UZH Mensa</string>
+    <string name="db_name" translatable="false">mensas.db</string>
+    <string name="language_german">German</string>
     <string name="language_english">English</string>
+    <string name="settings_label">Settings</string>
+    <string name="loading_label">Loading…</string>
+    <string name="info_label" translatable="false">Info</string>
+    <string name="no_offers_available_today_singular">No offers available for today</string>
+    <string name="refresh_label">Refresh</string>
+    <string name="back_label">Back</string>
+    <string name="eth_zurich_logo_label">ETH Zurich Logo</string>
+    <string name="uzh_logo_label" translatable="false">UZH Logo</string>
+    <string name="no_offer_available_for_today_plural">No offer available for today</string>
+    <string name="updating_menu_language">Updating menus to %1$s</string>
 </resources>
