--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="uzh_logo_label" translatable="false">UZH Logo</string>
     <string name="no_offer_available_for_today_plural">No offer available for today</string>
     <string name="updating_menu_language">Updating menus to %1$s</string>
+    <string name="menu_language_label">Mensa Menu Language</string>
 </resources>
