--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -14,4 +14,6 @@
     <string name="app_language_label">应用语言</string>
     <string name="change_app_language_in_settings_label">请在系统设置中更改应用的界面语言</string>
     <string name="open_system_settings_label">打开系统设置</string>
+    <string name="source_code_link_desc">该应用程序是开源的。您可以在 GitHub 上找到源代码和更新。</string>
+    <string name="source_code_label">源代码</string>
 </resources>
