--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
+<!--
+  ~ Copyright (c) 2025 Maximilian Schwärzler
+  ~
+  ~ This source code is licensed under the MIT license found in the
+  ~ LICENSE file in the root directory of this source tree.
+  -->
+
 <resources>
     <string name="app_name" translatable="false">ETH/UZH Mensa</string>
     <string name="db_name" translatable="false">mensas.db</string>
