--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -22,4 +22,5 @@
     <string name="open_system_settings_label">打开系统设置</string>
     <string name="source_code_link_desc">该应用程序是开源的。您可以在 GitHub 上找到源代码和更新。</string>
     <string name="source_code_label">源代码</string>
+    <string name="open_github_repo_external_link_label">在浏览器中打开 GitHub 仓库</string>
 </resources>
